added login with google flow

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ dependencies {
 	// Spring Security for JWT
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
+	// Oauth 2
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
 	// JWT library
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
@@ -43,6 +46,15 @@ dependencies {
 
 	// send mail
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+	// login with google
+	implementation 'com.google.api-client:google-api-client:2.2.0'
+	implementation 'com.google.http-client:google-http-client-jackson2:1.43.3'
+	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
+
+	implementation 'me.paulschwarz:spring-dotenv:4.0.0'
+
+
 }
 
 tasks.named('test') {
