--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,10 @@ spring.data.mongodb.auto-index-creation=true
 # mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=chaitanyanalawade84@gmail.com
-spring.mail.password=  qqaiowzonmhizgwl
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# oauth2
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
